--- a/src/css/style.css
+++ b/src/css/style.css
@@ -127,6 +127,14 @@ main {
     margin: 8px;
 }
 
+.main-outputdata-outputText {
+    font-family: "Ephesis", sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    text-align: left;
+    color: #fff;
+}
+
 .footer {
     display: flex;
     justify-content: center;
@@ -142,3 +150,41 @@ main {
     margin-top: 2px;
     color: #fff;
 }
+
+@media (max-width:768px) {
+
+    main {
+        display: flex;
+        flex-direction: column;
+    }
+    .main-inputdata-text-textarea {
+        width: 688px;
+        height: 328px;
+        margin-left: 40px;
+    }
+
+    .main-inputdata-information {
+        margin-left: 40px;
+    }
+
+    .main-inputdata-button {
+        margin-left: 40px;
+    }
+
+    .main-outputdata {
+        width: 688px;
+        height: auto;
+        margin-top: 40px;
+        margin-left: 40px;
+    }
+
+    .main-outputdata-img {
+        display: none;
+    }
+
+    .footer {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+}
+
