style: modified the layout image

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,8 +106,8 @@ main {
 }
 
 .main-outputdata-img {
-    width: 250px;
-    margin-left: 24px;
+    width: 120px;
+    margin-left: 30%;
 }
 
 .main-outputdata-subtitle {
