feat: added button to copy and paste text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,6 +134,56 @@ main {
     color: #fff;
 }
 
+.main-outputdata-copyButton {
+    position: fixed;
+    padding: 10px;
+    width: 50px;
+    margin-top: 450px;
+    background: transparent;
+    color: #fff;
+    font-size: 18px;
+    border: 1px dashed #fff;
+    outline: none;
+    border-radius: 10px;
+    cursor: pointer;
+    display: none;
+}
+
+.main-outputdata-copyButton:active {
+    background: #fff;
+    color: black;
+}
+
+.main-outputdata-copyButton:before {
+    content: "Copiado";
+    position: absolute;
+    top: -45px;
+    right: -10px;
+    background: #fff;
+    color: black;
+    padding: 8px 10px;
+    border-radius: 20px;
+    font-size: 15px;
+    display: none;
+}
+
+.main-outputdata-copyButton:after {
+    content: "";
+    position: absolute;
+    top: -15px;
+    right: 20px;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    transform: rotate(45deg);
+    display: none;
+}
+
+.main-outputdata-copyButton.copied:before,
+.main-outputdata-copyButton.copied:after {
+    display: block;
+}
+
 .footer {
     display: flex;
     justify-content: center;
@@ -184,6 +234,7 @@ main {
     .footer {
         margin-top: 8px;
         margin-bottom: 8px;
+        margin-left: 40px;
     }
 }
 
@@ -191,6 +242,7 @@ main {
 
     .main-inputdata-text-textarea {
         width: 343px;
+        height: 200px;
         margin-left: 16px;
     }
 
@@ -205,6 +257,10 @@ main {
     .main-outputdata {
         width: 343px;
         margin-left: 16px;
+    }
+
+    .footer {
+        margin-left: 24px;
     }
 }
 
