--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: url('./assets/images/background.png') no-repeat;
+    background: url('../../assets/images/background.png') no-repeat;
     background-size: cover;
 }
 
